fixed some issues on faq and w3c validation

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
         <!-- Trusted Companies Section Start -->
         <section class="trusted-companies">
-            <p class="section-title">Trusted by Companies like</p>
+            <h2 class="section-title">Trusted by Companies like</h2>
             <div class="companies">
-                <img src="./resources/images/companies/9@1X.png" alt="">
-                <img src="./resources/images/companies/Group 44@1X.png" alt="">
-                <img src="./resources/images/companies/Group 56@1X.png" alt="">
-                <img src="./resources/images/companies/Group 57@1X.png" alt="">
-                <img src="./resources/images/companies/Group 86@1X.png" alt="">
+                <img src="./resources/images/companies/cmp1.png" alt="">
+                <img src="./resources/images/companies/cmp2.png" alt="">
+                <img src="./resources/images/companies/cmp3.png" alt="">
+                <img src="./resources/images/companies/cmp4.png" alt="">
+                <img src="./resources/images/companies/cmp5.png" alt="">
             </div>
         </section>
         <!-- Trusted Companies Section End -->
@@ -172,7 +172,7 @@
             <div class="code-integration__container">
                 <div class="code-integration__contents">
                     <div class="code-integration__left">
-                        <img src="./resources/images/code-optimize/Vector Smart Object@1X.png" alt="">
+                        <img src="./resources/images/code-optimize/code-optimize-bg.png" alt="">
                     </div>
                     <div class="code-integration__right">
                         <h1 class="section-heading">Designed & built by the latest code integration</h1>
@@ -365,9 +365,14 @@
                     the world's most elevant channels such as Facebook.</p>
                 <div class="faq__contents">
                     <!-- Single FAQ -->
-                    <div class="faq__block faq__block--active">
-                        <button class="faq__accordian"><span>How to Contact with riders emergency?</span><i
-                                class="fas fa-plus faq__expand-icon"></i></button>
+                    <div class="faq__block show-text">
+                        <div class="faq__accordian">
+                            <span>How to Contact with riders emergency?</span>
+                            <div class="faq__action">
+                                <button class="faq__expand-icon"><i class="fas fa-plus"></i></button>
+                                <!-- <button class="faq__shrink-icon"><i class="fas fa-minus"></i></button> -->
+                            </div>
+                        </div>
                         <div class="faq__panel">
                             <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.
                                 iterative approaches to corporate strategy foster collaborative thinking to further
@@ -379,8 +384,13 @@
 
                     <!-- Single FAQ -->
                     <div class="faq__block">
-                        <button class="faq__accordian"><span>App installation failed, how to update system
-                                information?</span><i class="fas fa-plus faq__expand-icon"></i></button>
+                        <div class="faq__accordian">
+                            <span>App installation failed, how to update system information?</span>
+                            <div class="faq__action">
+                                <button class="faq__expand-icon"><i class="fas fa-plus"></i></button>
+                                <!-- <button class="faq__shrink-icon"><i class="fas fa-minus"></i></button> -->
+                            </div>
+                        </div>
                         <div class="faq__panel">
                             <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.
                                 iterative approaches to corporate strategy foster collaborative thinking to further
@@ -390,9 +400,14 @@
                         </div>
                     </div>
                     <!-- Single FAQ -->
-                    <div class="faq__block">
-                        <button class="faq__accordian"><span>Website response talking time, how to improve?</span><i
-                                class="fas fa-plus faq__expand-icon"></i></button>
+                    <div class="faq__block"> 
+                        <div class="faq__accordian">
+                            <span>Website response talking time, how to improve?</span>
+                            <div class="faq__action">
+                                <button class="faq__expand-icon"><i class="fas fa-plus"></i></button>
+                                <!-- <button class="faq__shrink-icon"><i class="fas fa-minus"></i></button> -->
+                            </div>
+                        </div>
                         <div class="faq__panel">
                             <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.
                                 iterative approaches to corporate strategy foster collaborative thinking to further
@@ -402,9 +417,14 @@
                         </div>
                     </div>
                     <!-- Single FAQ -->
-                    <div class="faq__block">
-                        <button class="faq__accordian"><span>New Update fixed all bug and issues</span><i
-                                class="fas fa-plus faq__expand-icon"></i></button>
+                    <div class="faq__block">     
+                        <div class="faq__accordian">
+                            <span>New Update fixed all bug and issues</span>
+                            <div class="faq__action">
+                                <button class="faq__expand-icon"><i class="fas fa-plus"></i></button>
+                                <!-- <button class="faq__shrink-icon"><i class="fas fa-minus"></i></button> -->
+                            </div>
+                        </div>
                         <div class="faq__panel">
                             <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.
                                 iterative approaches to corporate strategy foster collaborative thinking to further
@@ -414,9 +434,14 @@
                         </div>
                     </div>
                     <!-- Single FAQ -->
-                    <div class="faq__block">
-                        <button class="faq__accordian"><span>How to stay connected?</span><i
-                                class="fas fa-plus faq__expand-icon"></i></button>
+                    <div class="faq__block">  
+                        <div class="faq__accordian">
+                            <span>How to stay connected?</span>
+                            <div class="faq__action">
+                                <button class="faq__expand-icon"><i class="fas fa-plus"></i></button>
+                                <!-- <button class="faq__shrink-icon"><i class="fas fa-minus"></i></button> -->
+                            </div>
+                        </div>
                         <div class="faq__panel">
                             <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.
                                 iterative approaches to corporate strategy foster collaborative thinking to further
