--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Asif Mahmud Rony">
-    <title>Applab Landing Page</title>
+    <title>Applab Landing Page - Creation of Asif Mahmud Rony</title>
     <!--CDN link for remotely access to font awesome and Bootstrap framework-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -500,7 +500,7 @@
                         <a href="#" class="social-link"><i class="fab fa-github-square"></i></a>
                     </div>
                     <div class="footer__copyright">
-                        copyright &copy; Asif Mahmud Rony || designed by Arifur Rahman Tushar 2019. All rights reserved
+                        copyright &copy; <a href="https://asifmrony.github.io/">Asif Mahmud Rony</a> || designed by Arifur Rahman Tushar 2019. All rights reserved
                     </div>
                 </div>
             </div>
