testimonial carousel Added

--- a/index.html
+++ b/index.html
@@ -327,27 +327,84 @@
                             consume information entirely and
                             the world's most elevant channels such as Facebook.</p>
                         <div class="client-review client-review--one">
-                            <div class="client-review__ratings">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                            <div class="client-review__slide">
+                                <div class="client-review__ratings">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <h3 class="client-review__header-title"> User Friendly & Customizable</h3>
+                                <p class="client-review__content">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, fuga, optio autem
+                                    dolore ullam quos libero voluptatibus commodi consequuntur aspernatur aut minima, fugit
+                                    neque eaque repellat ut! Necessitatibus, repudiandae aliquid?
+                                </p>
+                                <div class="client-review__client">
+                                    <div class="client-review__client-image">
+                                        <img src="./resources/images/clients/client-reviewed.png" alt="">
+                                    </div>
+                                    <div class="client-review__client-bio">
+                                        <h4 class="client-review__client-name">Zoltan Nemeth</h4>
+                                        <p class="client-review__client-affliation mb-0">CEO of Pixier Lab</p>
+                                    </div>
+                                </div>
+                            </div> 
+                            <div class="client-review__slide">
+                                <div class="client-review__ratings">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <h3 class="client-review__header-title"> Good Customer Support</h3>
+                                <p class="client-review__content">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, fuga, optio autem
+                                    dolore ullam quos libero voluptatibus commodi consequuntur aspernatur aut minima, fugit
+                                    neque eaque repellat ut! Necessitatibus, repudiandae aliquid?
+                                </p>
+                                <div class="client-review__client">
+                                    <div class="client-review__client-image">
+                                        <img src="./resources/images/clients/client-3.png" alt="">
+                                    </div>
+                                    <div class="client-review__client-bio">
+                                        <h4 class="client-review__client-name">Nathan Perry</h4>
+                                        <p class="client-review__client-affliation mb-0">CEO of Fountainaits</p>
+                                    </div>
+                                </div>
                             </div>
-                            <h3 class="client-review__header-title"> User Friendly & Customizable</h3>
-                            <p class="client-review__content">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, fuga, optio autem
-                                dolore ullam quos libero voluptatibus commodi consequuntur aspernatur aut minima, fugit
-                                neque eaque repellat ut! Necessitatibus, repudiandae aliquid?
-                            </p>
-                            <div class="client-review__client">
-                                <div class="client-review__client-image">
-                                    <img src="./resources/images/clients/client-reviewed.png" alt="">
+                            <div class="client-review__slide">
+                                <div class="client-review__ratings">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
                                 </div>
-                                <div class="client-review__client-bio">
-                                    <h4 class="client-review__client-name">Zoltan Nemeth</h4>
-                                    <p class="client-review__client-affliation mb-0">CEO of Pixier Lab</p>
+                                <h3 class="client-review__header-title"> Simple & Easy to Use</h3>
+                                <p class="client-review__content">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, fuga, optio autem
+                                    dolore ullam quos libero voluptatibus commodi consequuntur aspernatur aut minima, fugit
+                                    neque eaque repellat ut! Necessitatibus, repudiandae aliquid?
+                                </p>
+                                <div class="client-review__client">
+                                    <div class="client-review__client-image">
+                                        <img src="./resources/images/clients/client-1.png" alt="">
+                                    </div>
+                                    <div class="client-review__client-bio">
+                                        <h4 class="client-review__client-name">John Doe</h4>
+                                        <p class="client-review__client-affliation mb-0">CEO of AMR Digital</p>
+                                    </div>
                                 </div>
+                            </div>
+                            <div class="client-review-buttons">
+                                <button type="button" class="prevBtn slider-btn">
+                                    <i class="fas fa-long-arrow-alt-left"></i>
+                                </button>
+                                <button type="button" class="nextBtn slider-btn">
+                                    <i class="fas fa-long-arrow-alt-right"></i>
+                                </button>
                             </div>
                         </div>
                     </div>
